--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ h1 {
 display: flex;
     flex-direction: row;
 justify-content: center;
+font-family: monospace;
+text-transform: uppercase;
+font-weight: bold;
+font-size: 100px;
 
 }
 
@@ -26,8 +30,17 @@ margin-left: 350px;
 
 }
 
-#container div {
+.grid-item {
     width: 100%;
     height: 100%;
     border: 1px solid gray;
     }
+
+.hidden {
+
+    display: none;
+    background-color: black;
+    
+   
+
+}
