--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ font-size: 100px;
 
 }
 
+#eraser {
+    padding: 20px;
+    border-radius: 50px;
+margin-left: 500px;
+border-style: double;
+}
+
 #container {
 
 background-color: white;
@@ -25,7 +32,8 @@ display: grid;
 grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
 width: 560px;
 height: 560px;
-border: 3px solid black;
+border: 3px solid black; */
+margin-top: 40px;
 margin-left: 350px;
 
 }
@@ -33,7 +41,7 @@ margin-left: 350px;
 .grid-item {
     width: 100%;
     height: 100%;
-    border: 1px solid gray;
+    
     
     }
 
